--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: RateLimiter
@@ -8,8 +7,14 @@ spring:
       password: password
 logging:
   level:
+    root: INFO
     org.springframework.security: INFO
     org.springframework.web.filter: INFO
 server:
   servlet:
     context-path: /api
+glint:
+  ratelimiter:
+    capacity: 5
+    refillRatePerSecond: 0
+
